[resolves #60] Improve UI for model build, download, deploy
