# jaxrs/src/main/java/io/nessus/actions/jaxrs/type/ModelAdd.java
@@ -6,10 +6,10 @@ import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 @JsonInclude(Include.NON_EMPTY)
-public class UserModelAdd extends UserModelBase {
+public class ModelAdd extends ModelBase {
 	
 	@JsonCreator
-	public UserModelAdd(
+	public ModelAdd(
 		@JsonProperty(value = "userId", required = true) String userId, 
 		@JsonProperty(value = "content", required = true) String content) {
 		super(userId, content);
